<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="60dp">

        <LinearLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorAccent"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layanan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reparasi_motor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reparasi_motor" />

        <Button
            android:id="@+id/btn_beli_sparepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beli_sparepart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teknisi_terdekat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_teknisi_terdekat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_show_all_teknisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sparepart_terbaru"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sparepart_terbaru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_show_all_sparepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all" />
    </LinearLayout>
</ScrollView>