<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="false"
    android:paddingBottom="60dp"
    tools:context=".order.SubServiceFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/tv_price_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/price_detail"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_check_up_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/check_up_cost"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_idr_check_up_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_light"
                tools:text="Rp. 10.000"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_service_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/service_total"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_idr_service_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            tools:text="Rp. 75.000"/>

    </LinearLayout>

        <View
            android:id="@+id/v_for_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_price_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/price_total"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"/>

        <TextView
            android:id="@+id/tv_idr_price_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            tools:text="Rp. 85.000"/>

    </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_method_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/payment_method"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spn_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/btn_make_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/make_payment"
            style="@style/btnStyleGreen"/>
    </LinearLayout>

</ScrollView>